<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button_main_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_main_game"
        android:layout_below="@+id/button_main_game"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_main"
        android:text="@string/about_part" />

    <Button
        android:id="@+id/button_main_study"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_main_game"
        android:layout_below="@+id/button_main_game"
        android:layout_marginTop="14dp"
        android:background="@drawable/button_main"
        android:text="@string/study_part" />

    <MediaController
        android:id="@+id/mediaController1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="16dp"
        android:background="@drawable/button_mus" >
    </MediaController>

    <Button
        android:id="@+id/button_main_setting"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignTop="@+id/mediaController1"
        android:layout_toRightOf="@+id/button_main_game"
        android:background="@drawable/button_setting" />

    <TextView
        android:id="@+id/text_mus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/mediaController1"
        android:layout_below="@+id/button_main_setting"
        android:text="@string/text_mus"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/text_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_main_setting"
        android:layout_below="@+id/button_main_setting"
        android:text="@string/text_set"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button_main_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/button_main"
        android:text="@string/game_part" />

    <TextView
        android:id="@+id/text_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_mus"
        android:layout_alignParentBottom="true"
        android:text="@string/text_out"
        android:textAppearance="?android:attr/textAppearanceMedium"  />

    <Button
        android:id="@+id/button_main_out"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_out"
        android:layout_alignLeft="@+id/text_out"
        android:background="@drawable/button_out" />

</RelativeLayout>